# stellarlend

./: .gitignore  CHANGELOG.md  CREATE_PR.md  GOVERNANCE_ATTACK_PREVENTION_SUMMARY.md  GOVERNANCE_IMPLEMENTATION_STATUS.md  GOVERNANCE_SECURITY_QUICK_REFERENCE.md  GOVERNANCE_TEST_CODE_EXAMPLES.md  GOVERNANCE_TEST_QUICK_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  ISSUE_GOVERNANCE_ATTACK_PREVENTION_COMPLETE.md  ORACLE_FIXES_PR_DESCRIPTION.md  PR_AUDIT_LOGGING.md  PR_DESCRIPTION.md  PR_FINAL_DESCRIPTION.md  PULL_REQUEST_INSTRUCTIONS.md  README.md  REENTRANCY_PROTECTION.md  SECURITY.md  TEST_SUMMARY.md  TODO.md  UPGRADE_MIGRATION_IMPLEMENTATION.md  UPGRADE_SAFETY_SUITE_SUMMARY.md  UPGRADE_TESTS_README.md  docker-compose.yml  package-lock.json  package.json  run-benchmarks.sh  vercel.json
stellar-lend/: Cargo.toml  clippy_log.txt  cobertura.xml  deny.toml
stellar-lend/benchmarks/: Cargo.toml  README.md  baseline.json  gas-baseline.json
stellar-lend/benchmarks/src/: amm_benchmarks.rs  bridge_benchmarks.rs  framework.rs  hello_world_benchmarks.rs  lending_benchmarks.rs  main.rs  report.rs
stellar-lend/client/: Cargo.toml
stellar-lend/client/src/: retry.rs
stellar-lend/contracts/amm/: Cargo.toml
stellar-lend/contracts/amm/src/: amm.rs  lib.rs  test.rs
stellar-lend/contracts/bridge/: Cargo.toml
stellar-lend/contracts/bridge/src/: bridge.rs  lib.rs  test.rs
stellar-lend/contracts/common/: Cargo.toml  INTEGRATION_TEST_SUITE.md  SHARED_TYPES_MIGRATION.md
stellar-lend/contracts/common/src/: cache.rs  events.rs  lib.rs  message_bus.rs  protocol_integration_test.rs  shared_types.rs  upgrade.rs
stellar-lend/contracts/delegation-registry/: Cargo.toml
stellar-lend/contracts/delegation-registry/src/: lib.rs
stellar-lend/contracts/hello-world/: DIFFERENTIAL_TEST_REPORT.md  INITIALIZATION_SECURITY_NOTES.md  INITIALIZATION_TEST_SUMMARY.md  README.md
stellar-lend/contracts/hello-world/src/: amm.rs  borrow.rs  circuit_breaker.rs  config_snapshot.rs  credit_score.rs  cross_asset.rs  deposit.rs  errors.rs  events.rs  gas_benchmark.rs  governance.rs  governance_test.rs  intents.rs  interest_rate.rs  lib.rs  liquidate.rs  liquidation_queue.rs  mev_protection.rs  monitor_test.rs  oracle.rs  rate_limiter.rs  repay.rs  reserve.rs  risk_management.rs  risk_params.rs  safe_math.rs  storage.rs  timelock.rs  treasury_test.rs  types.rs
stellar-lend/contracts/hello-world/src/tests/: access_control_regression_test.rs  amm_impact_test.rs  arithmetic_safety_test.rs  borrow_cap_test.rs  bridge_test.rs  config_snapshot_test.rs  cross_contract_test.rs  diff_harness.rs  differential_test.rs  gov_asset_test.rs  governance_attack_prevention_test.rs  input_length_test.rs  intents_test.rs  interest_rate_test.rs  isolated_pool_test.rs  mev_protection_test.rs  migration_verification_test.rs  mod.rs  multisig_governance_execution_test.rs  multisig_test.rs  oracle_configuration_test.rs  oracle_staleness_fallback_test.rs  oracle_test.rs  rate_limiter_test.rs  recovery_test.rs  risk_params_test.rs  supply_cap_test.rs  test_cross_asset_borrow_repay_edge_cases.rs
stellar-lend/contracts/hello-world/test_snapshots/test_zero_amount/: test_min_collateral_ratio_both_zero.1.json  test_mixed_zero_and_valid_full_lifecycle.1.json  test_zero_borrow_between_valid_borrows.1.json  test_zero_borrow_with_existing_debt.1.json  (+2 more)
stellar-lend/contracts/institutional-wallet/: Cargo.toml
stellar-lend/contracts/institutional-wallet/src/: lib.rs  storage.rs  test.rs  types.rs
stellar-lend/contracts/lending/: Cargo.toml  README.md  STRESS_TEST_DOCUMENTATION.md  UPGRADE_MIGRATION_SAFETY_TESTS.md  UPGRADE_QUICK_REFERENCE.md  emergency_shutdown.md  lending_test_report.txt  pause.md
stellar-lend/contracts/lending/src/: borrow.rs  borrow_test.rs  commitments.rs  commitments_test.rs  cross_asset_test.rs  data_store.rs  data_store_test.rs  deposit.rs  deposit_test.rs  emergency_shutdown_test.rs  events.rs  flash_loan.rs  flash_loan_test.rs  invariants.rs  lib.rs  liquidation_boundary_test.rs  math_safety_test.rs  meta.rs  meta_test.rs  pause.rs  pause_test.rs  race_tests.rs  rewards.rs  risk_monitor.rs  stablecoin_test.rs  stress_test.rs  test_performance.rs  token_receiver_test.rs  upgrade.rs  upgrade_migration_safety_test.rs  upgrade_test.rs  views.rs  withdraw.rs  withdraw_test.rs  yield_farming.rs
stellar-lend/contracts/migration-hub/: Cargo.toml
stellar-lend/contracts/migration-hub/src/: adapter.rs  lib.rs  test.rs  types.rs
stellar-lend/contracts/stablecoin/: Cargo.toml
stellar-lend/contracts/stablecoin/src/: lib.rs
stellar-lend/docs/: INTEREST_NUMERIC_ASSUMPTIONS.md  LONG_HORIZON_INTEREST_TEST_REPORT.md
stellar-lend/fuzz/: Cargo.toml
stellar-lend/fuzz/corpus/amm_actions/: seed_01  seed_02  seed_03  seed_04  seed_05  seed_06  seed_07  seed_08  seed_09  seed_10
stellar-lend/fuzz/corpus/bridge_actions/: seed_01  seed_02  seed_03  seed_05  seed_06  seed_07  seed_08  seed_09  seed_10
stellar-lend/fuzz/corpus/lending_actions/: seed_01  seed_02  seed_03  seed_04  seed_05  seed_06  seed_07  seed_08  seed_09  seed_10
stellar-lend/fuzz/fuzz_targets/: amm_actions.rs  bridge_actions.rs  lending_actions.rs
stellar-lend/fuzz/src/: amm.rs  bridge.rs  encoding.rs  lending.rs  lib.rs
stellar-lend/indexing_system/migrations/: 20240101000000_create_events_table_with_indexes.sql  20240102000000_performance_optimizations.sql
stellar-lend/indexing_system/src/: cache.rs  config.rs  lib.rs  metrics.rs  parallel_indexer.rs  query.rs  repository.rs
stellar-lend/indexing_system/src/tests/: mod.rs  parallel_indexer_tests.rs
stellar-lend/scripts/: check_gas_benchmarks.py
(+233 files in other folders)
