[package]
name = "stellarlend-contract-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata.cargo-fuzz]
workspace = ".."
target-dir = "../target/fuzz"

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "23.4.1", features = ["testutils"] }

# Contracts under test
stellarlend-lending = { path = "../contracts/lending", features = ["testutils"] }
stellarlend-amm = { path = "../contracts/amm", features = ["testutils"] }
bridge = { path = "../contracts/bridge", features = ["testutils"] }

[[bin]]
name = "lending_actions"
path = "fuzz_targets/lending_actions.rs"
test = false
doc = false

[[bin]]
name = "amm_actions"
path = "fuzz_targets/amm_actions.rs"
test = false
doc = false

[[bin]]
name = "bridge_actions"
path = "fuzz_targets/bridge_actions.rs"
test = false
doc = false
