[package]
name = "stellarlend-lending"
version = "0.1.0"
edition = "2021"


[lib]
name = "stellarlend_lending"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
stellarlend-common = { path = "../common" }

[dev-dependencies]
stellarlend-common = { path = "../common", features = ["testutils"] }
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
